--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "inspire-me",
   "version": "1.0.0",
-  "main": "./src/server.ts",
-  "scripts": {
-    "build": "babel src --out-dir lib --ignore '**/*.test.ts' --extensions .ts",
-    "start": "ts-node-dev .",
-    "lint": "eslint . --fix --ext .js,.json,.ts --quiet",
-    "type-check": "tsc --noEmit",
-    "generate": "prisma generate --schema ./src/db/prisma/schema.prisma"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/KolesnykMA/inspire-me.git"
+  },
+  "main": "./src/server.ts",
+  "scripts": {
+    "build": "babel src --out-dir lib --ignore '**/*.test.ts' --extensions .ts",
+    "generate": "prisma generate --schema ./src/db/prisma/schema.prisma",
+    "lint": "eslint . --fix --ext .js,.json,.ts --quiet",
+    "start": "ts-node-dev .",
+    "type-check": "tsc --noEmit"
   },
   "babel": {
     "extends": "@shelf/babel-config/backend"
@@ -31,16 +31,16 @@
   "devDependencies": {
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
-    "@types/cors": "2.8.12",
     "@shelf/babel-config": "0.1.5",
     "@shelf/eslint-config": "2.5.2",
+    "@shelf/prettier-config": "1.0.0",
     "@shelf/tsconfig": "0.0.6",
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/http-errors": "1.8.1",
     "@types/jest": "27.0.3",
     "@types/lodash": "4.14.177",
     "@types/node": "16.11.10",
-    "@shelf/prettier-config": "1.0.0",
     "babel-jest": "^27.3.1",
     "eslint": "7.32.0",
     "jest": "27.3.1",
