--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "16.11.10",
     "babel-jest": "^27.3.1",
     "eslint": "7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "jest": "27.3.1",
     "prettier": "2.5.0",
     "prisma": "3.5.0",
