--- a/package.json
+++ b/package.json
@@ -18,13 +18,18 @@
   },
   "prettier": "@shelf/prettier-config",
   "dependencies": {
-    "@prisma/client": "3.5.0",
+    "@prisma/client": "^3.6.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.6",
     "ajv": "^8.8.2",
+    "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "1.19.0",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "http-errors": "1.8.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "4.17.21",
     "ts-node-dev": "1.1.8",
     "winston": "3.3.3"
@@ -47,7 +52,7 @@
     "eslint-config-prettier": "^8.3.0",
     "jest": "27.3.1",
     "prettier": "2.5.0",
-    "prisma": "3.5.0",
+    "prisma": "^3.6.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
   }
