--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "@prisma/client": "^3.6.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.6",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.0.1",
     "body-parser": "1.19.0",
+    "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
     "dotenv": "10.0.0",
     "express": "4.17.1",
